@@ -21,6 +21,7 @@ AEM:
 BCH:
 - (09/06/04) Adding 'relations(_)' type.
 - (07/09/04) Adding the truncate function with a position.
+- (22/10/04) Renaming 'Delete' to 'Remove'.
 
 BITBCH:
 - (23/06/04) Adding the 'And', 'Or', 'XOr' and 'Not' functions.
@@ -113,6 +114,9 @@ MDR:
 
 MMG:
 - (19/07/04) Adapting to changes in 'FLW' library.
+
+MMI:
+- (22/07/04) Using a 'E_BUNCH_' instead of a 'E_MEMORY_'.
 
 MMM:
 - (14/07/04) Using the 'CIO' library instead of 'STF'.
